--- a/tennis.ipynb
+++ b/tennis.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -383,7 +385,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cc = np.multiply(pca.components_,np.transpose(np.sqrt(np.matlib.repmat(pca.explained_variance_,np.shape(pca.components_)[1],1))))\n",
@@ -619,7 +623,9 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Implement SOM\n",
@@ -1010,8 +1016,17 @@
    "source": [
     "I was able to learn a lot about tennis from this data with very little background in the game. Women's tennis emphasizes a better return game, while men's tennis is dominated by strong servers. Break points favor the receiving player in terms of performance. A few players break the norm. For men, these players are likely making up for a weak serve. \n",
     "\n",
-    "SOMs are a cool way to perform unsupervised clustering with an interpretable "
+    "SOMs are a cool way to perform unsupervised clustering with an interpretable outcome!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
